force-app/main/default/objects/Annual_Inspection__c.object
<CustomObject>
    <fields>
        <fullName>Monitor_Info__c</fullName>
        <formula>IF(Property_Interest__c &lt;&gt; &quot;&quot;,
Property_Interest__r.Monitor_Assigned__r.FirstName &amp; &quot; &quot;&amp; Property_Interest__r.Monitor_Assigned__r.LastName &amp; &quot;, &quot; &amp; Property_Interest__r.Monitor_Assigned__r.Title &amp;  BR() &amp; Property_Interest__r.Monitor_Assigned__r.CompanyName &amp;  BR() &amp; &quot;Email: &quot; &amp;  Property_Interest__r.Monitor_Assigned__r.Email &amp;  BR() &amp; IF(Property_Interest__r.Monitor_Assigned__r.Phone&lt;&gt;&quot;&quot;, &quot; Phone: &quot; &amp; Property_Interest__r.Monitor_Assigned__r.Phone &amp;  BR(),&quot;&quot;) &amp; &quot;Mobile Phone: &quot; &amp;  Property_Interest__r.Monitor_Assigned__r.MobilePhone,
IF(Property_Interest_Eco_monitoring__c &lt;&gt; &quot;&quot;,
Property_Interest_Eco_monitoring__r.Monitor_Assigned__r.FirstName &amp; &quot; &quot;&amp; Property_Interest_Eco_monitoring__r.Monitor_Assigned__r.LastName &amp; &quot;, &quot; &amp; Property_Interest_Eco_monitoring__r.Monitor_Assigned__r.Title &amp;  BR() &amp; Property_Interest_Eco_monitoring__r.Monitor_Assigned__r.CompanyName &amp;  BR() &amp; &quot;Email: &quot; &amp;  Property_Interest_Eco_monitoring__r.Monitor_Assigned__r.Email &amp;  BR() &amp; &quot; Phone: &quot; &amp; Property_Interest_Eco_monitoring__r.Monitor_Assigned__r.Phone &amp;  BR() &amp; &quot;Mobile Phone: &quot; &amp;  Property_Interest_Eco_monitoring__r.Monitor_Assigned__r.MobilePhone,
Property_Management__r.Inspector_Assigned__r.FirstName &amp; &quot; &quot;&amp; Property_Management__r.Inspector_Assigned__r.LastName &amp; &quot;, &quot; &amp; Property_Management__r.Inspector_Assigned__r.Title &amp;  BR() &amp; Property_Management__r.Inspector_Assigned__r.CompanyName &amp;  BR() &amp; &quot;Email: &quot; &amp;  Property_Management__r.Inspector_Assigned__r.Email &amp;  BR() &amp; &quot; Phone: &quot; &amp; Property_Management__r.Inspector_Assigned__r.Phone &amp;  BR() &amp; &quot;Mobile Phone: &quot; &amp;  Property_Management__r.Inspector_Assigned__r.MobilePhone))</formula>
        <inlineHelpText>This info comes from the monitor&apos;s Salesforce user account and is not editable on the monitoring report.  Contact the Salesforce system administrator to make any changes to this information.</inlineHelpText>
        <label>Monitor Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Autopopulated by process when the user submits for approval so that they can be copied on the email notifications.</description>
        <inlineHelpText>The monitor assigned.  If the monitor assigned needs to change, it must be changed on the interest record and a new monitoring report must be created for that monitor.</inlineHelpText>
        <label>Monitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Annual_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monitor_s_Observations__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>Describe your own direct observations of land use practices on interest lands.
NOTE: Please take special care not to report things you did not actually see yourself in this section.</inlineHelpText>
        <label>Monitor&apos;s Observations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monitoring_Documentation__c</fullName>
        <inlineHelpText>List of documents added to the Monitoring Documentation folder in Box this year. Automatically updated when the &quot;refresh monitoring documents list&quot; checkbox is checked, but you can edit manually if needed.</inlineHelpText>
        <label>Monitoring Documentation List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monitoring_Report__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, Report_Name__c, &quot;target=_self&quot;)</formula>
        <inlineHelpText>Link to this report</inlineHelpText>
        <label>Monitoring Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Monitoring_Assignments__c</fullName>
        <description>Set to allow My Monitoring Assignments view to pick monitoring reports based on monitor assigned.</description>
        <formula>$User.Id =  Property_Interest__r.Monitor_Assigned__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set to allow My Monitoring Assignments view to show monitoring reports based on monitor assigned.</inlineHelpText>
        <label>My Monitoring Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Surveyor__c</fullName>
        <inlineHelpText>Please enter the name of the person who is conducting the field verification survey</inlineHelpText>
        <label>XDeprecate_Name of Surveyor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Natural_Communities_Observed__c</fullName>
        <description>For easements and deed restrictions.  Not required by SOP.</description>
        <inlineHelpText>Please note natural communities observed.</inlineHelpText>
        <label>Natural Communities Observed:</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_on_Attached_Photos_if_Applicable__c</fullName>
        <inlineHelpText>To attach, save your report and scroll down to &quot;Attach File&quot;</inlineHelpText>
        <label>Notes on Attached Photos if Applicable</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notice__c</fullName>
        <formula>IF( Created_or_Inspected_Date__c&lt;DATEVALUE(&quot;2018-01-01&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0150c000004Fs4u&quot;, &quot;Pin&quot;, 40, 40)&amp;&quot; &quot;&amp;&quot;While the photos are displayed below, the completed monitoring report form for this year is stored in Box as a document. (Click &apos;View Report PDFs Pre-2018&apos; button above to find it.)&quot;&amp;BR()&amp;BR()&amp;BR(),&quot;&quot;)</formula>
        <inlineHelpText>Notice - will display a message if necessary.</inlineHelpText>
        <label>Notice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Subdivisions_Formula__c</fullName>
        <formula>Property_Interest__r.Number_Subdivisions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If NOT subdivided, the number will be &quot;0&quot;.  If subdivided, will show a number 2 or more.  A monitoring report will have to be prepared for each owner after the initial overall report is created. This is not editable in the monitoring report.</inlineHelpText>
        <label>Number Subdivisions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Subdivisions__c</fullName>
        <description>For easements and deed restrictions  Add a link to help for instructions on creating the individual owner reports.</description>
        <inlineHelpText>If NOT subdivided, the number will be &quot;0&quot;.  If subdivided, will show a number 2 or more.  A monitoring report will have to be prepared for each owner after the initial overall report is created. This is not editable in the monitoring report.</inlineHelpText>
        <label>Number Subdivisions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Method_of_Inspection__c</fullName>
        <inlineHelpText>If you selected  &quot;Other&quot; method by which property was inspected, please describe that here.</inlineHelpText>
        <label>Other Method of Inspection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Contacted_Before_Visit__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>Please indicate whether the owner or the owner&apos;s representative was contacted before the monitoring visit.</inlineHelpText>
        <label>Owner/Rep Contacted Before Visit?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ownership_Issues_Noted__c</fullName>
        <inlineHelpText>Describe ownership issues noted.</inlineHelpText>
        <label>Describe Ownership Issues noted</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ownership_Issues_Reported_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To capture the name of the attorney or manager that serious property right issues are reported to.  It is required by SOP to report these issues to a TNC attorney.</description>
        <inlineHelpText>IF this report includes an infringement of Conservancy property rights (e.g. trespass or boundary dispute), Conservancy monitoring staff MUST bring it to the attention of a TNC attorney and enter the name of the attorney who was alerted. Else leave blank.</inlineHelpText>
        <label>Ownership Issues Reported To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Annual_Inspections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ownership_Issues__c</fullName>
        <inlineHelpText>Select the significant ownership issues or management problems that were observed on your visit.</inlineHelpText>
        <label>Ownership Issues</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Issues</fullName>
                </value>
                <value>
                    <fullName>Boundary Dispute/encroachment</fullName>
                </value>
                <value>
                    <fullName>Dumping_Vandalism</fullName>
                    <label>Dumping/Vandalism</label>
                </value>
                <value>
                    <fullName>Overuse</fullName>
                </value>
                <value>
                    <fullName>See Fee Land Inspection Record</fullName>
                </value>
                <value>
                    <fullName>Title issues</fullName>
                </value>
                <value>
                    <fullName>Trespass/Unauthorized Use</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ownership_Issues_checkbox__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(Ownership_Issues__c)),INCLUDES(Ownership_Issues__c, &quot;No Issues&quot;)), FALSE, TRUE)</formula>
        <inlineHelpText>This checkbox is automatically checked if any ownership issues have been indicated below. This is important for indicating issues that need to be reported to WO according to SOP.</inlineHelpText>
        <label>Ownership Issues?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDF_Created_Date__c</fullName>
        <inlineHelpText>Date the PDF version of this report was created.</inlineHelpText>
        <label>PDF Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDF_Report_Name__c</fullName>
        <formula>Report_Name__c&amp;&quot;.pdf&quot;</formula>
        <inlineHelpText>Name of the PDF version of the Monitoring Report.</inlineHelpText>
        <label>PDF Report Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plans_consistent_with_interest_terms__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>If there were catastrophic impacts AND there are plans to address them, does it appear that those activities will be in compliance with the terms of the easement or deed restriction?</inlineHelpText>
        <label>Plans consistent with interest terms?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plans_to_address_impacts__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>If yes, are there plans to address impacts or restore habitat.</inlineHelpText>
        <label>If yes, plans to address impacts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Contacts__c</fullName>
        <description>Created for easement and deed restrictions to maintain record of the contacts (owners and on-site) at the time of the inspection.  Copies into a text field from Rollup summary and gets copied to the monitoring report when it is approved. Any updates to contact information should be done via the easement and associated property contacts.</description>
        <inlineHelpText>Review and make updates to the property contacts on the &quot;Property Contacts&quot; related list of the easement or deed restriction record.  The contact information will be copied to the monitoring report upon approval.</inlineHelpText>
        <label>Property Contacts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Interest_Eco_monitoring__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Separate lookup for the Ecological Monitoring/RDM record type</description>
        <inlineHelpText>Select the Property Interest that the monitoring record applies to.</inlineHelpText>
        <label>Property Interest Eco</label>
        <referenceTo>Property_Interest__c</referenceTo>
        <relationshipLabel>Ecological Monitoring Reports</relationshipLabel>
        <relationshipName>Annual_Inspections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Interest_Group_Name__c</fullName>
        <formula>IF(Property_Interest__c &lt;&gt; &quot;&quot;, Property_Interest__r.Property_Interest_Group__r.Name,
IF(Property_Interest_Eco_monitoring__c &lt;&gt; &quot;&quot;, Property_Interest_Eco_monitoring__r.Property_Interest_Group__r.Name,&quot;&quot;))</formula>
        <inlineHelpText>Read only - Formula field that pulls from the property interest record.</inlineHelpText>
        <label>Property Interest Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Interest__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Created to relate easement monitoring reports to the property interest level.  Fee inspections are at the PMU level.</description>
        <inlineHelpText>Select the easement or deed restriction to be monitored.</inlineHelpText>
        <label>Property Interest</label>
        <referenceTo>Property_Interest__c</referenceTo>
        <relationshipLabel>Easement/Deed Restriction Monitoring Reports</relationshipLabel>
        <relationshipName>Annual_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Management_EDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created to have a separate related list for easement/deed restriction monitoring reports on the property management unit record.</description>
        <inlineHelpText>Read only. Copied from the interest record when report is created.</inlineHelpText>
        <label>Property Management EDR</label>
        <referenceTo>Property_Management__c</referenceTo>
        <relationshipLabel>Easement/Deed Restriction Monitoring Reports</relationshipLabel>
        <relationshipName>Annual_Inspections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup field - Property Management Unit that you are inspecting</inlineHelpText>
        <label>Property Management</label>
        <referenceTo>Property_Management__c</referenceTo>
        <relationshipLabel>Annual Fee Inspections</relationshipLabel>
        <relationshipName>Compliance_Monitoring</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The property manager of the property that this report relates to.</inlineHelpText>
        <label>Property Record Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Compliance_Monitoring</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_transferred_since_last_report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>Check this box if the property (ownership) has been transferred since the last monitoring report.</inlineHelpText>
        <label>Property transferred since last report?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rare_Species_Observed__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>Note any rare species specifically observed on your visit.</inlineHelpText>
        <label>Rare Species Observed:</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <formula>TEXT(YEAR(IF(ISBLANK(Inspection_Date__c), DATEVALUE(CreatedDate), Inspection_Date__c)))&amp;&quot; Monitoring Report - &quot;&amp;
IF(Property_Interest_Eco_monitoring__r.Name&lt;&gt;&quot;&quot;,
Property_Interest_Eco_monitoring__r.Name&amp;&quot; Ecological Monitoring&quot;,
Property_Interest__r.Name)</formula>
        <inlineHelpText>Name of monitoring report</inlineHelpText>
        <label>Report Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reports_Archive_ID__c</fullName>
        <description>To pull into Reports Archive button</description>
        <formula>BLANKVALUE(Property_Interest__r.MRFolderID__c,
Property_Interest_Eco_monitoring__r.MRFolderID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reports Archive ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed_Contact_Information__c</fullName>
        <description>Easements and deed restrictions 5/8/17</description>
        <inlineHelpText>Indicate that you have reviewed the Contact information and made any necessary updates on the Property Contacts related list of the interest record.  It is correct to the best of my knowledge:  (Your review of this information is required.)</inlineHelpText>
        <label>Reviewed Contact Information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewed_basic_interest_information__c</fullName>
        <description>Created for easement and deed restriction monitoring 5/2/17</description>
        <inlineHelpText>Have reviewed the above and other basic information in the interest (easement or deed restriction) record and it is accurate to the best of my knowledge.  If there are discrepancies, please make changes on the interest record, not in the monitoring report</inlineHelpText>
        <label>Reviewed basic interest information?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <inlineHelpText>The short name for the property interest related to this record.</inlineHelpText>
        <label>Short Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Significant_Changes__c</fullName>
        <inlineHelpText>Indicate if any of your observations revealed any significant changes from last year. If yes, enter associated notes.</inlineHelpText>
        <label>Significant changes this year?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Monitoring status as of monitoring report completion date.  Should copy back to status at last monitoring on the associated interest when reporting is done.</description>
        <inlineHelpText>Select the final status of monitoring/compliance of the property interest at the end of reporting cycle OR leave as DRAFT to save the report and return later to complete.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Monitoring_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subdivision_Name__c</fullName>
        <description>Text version of subdivision for use in DLRS formulas. Should be viewable only by Salesforce Admin.</description>
        <formula>Subdivision__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subdivision Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this easement is subdivided, please select the Subdivision that is being monitored. If this easement is not subdivided, you can leave this field blank.</inlineHelpText>
        <label>Subdivision</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>There is no subdivision in this interest matching the subdivision name provided.</errorMessage>
            <filterItems>
                <field>Subdivision__c.Property_Interest__c</field>
                <operation>equals</operation>
                <valueField>$Source.Property_Interest__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Subdivision__c</referenceTo>
        <relationshipLabel>Annual Inspections</relationshipLabel>
        <relationshipName>Annual_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary_and_Recommendations__c</fullName>
        <description>For Easements and Deed restrictions</description>
        <inlineHelpText>Provide a narrative. It must incorporate information from previous reports.  Include impressions of long-term trends and conditions of site.</inlineHelpText>
        <label>Summary and Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_ID__c</fullName>
        <inlineHelpText>The Survey ID is required when conducting a formal field verification.</inlineHelpText>
        <label>XDeprecate_Survey ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tract_additions_or_transfers_to_the_Unit__c</fullName>
        <inlineHelpText>Indicate if tracts have been added or transferred to the Property Management Unit or if there has been no change.</inlineHelpText>
        <label>Tract additions or transfers to the Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes - tracts added</fullName>
                </value>
                <value>
                    <fullName>Yes - tracts transferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_Monitoring_Documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this box to pull in the list of Monitoring Documents that have been uploaded to Box since this report record was created. It can take up to a minute for the list to populate, so please refresh the page to see the list.</inlineHelpText>
        <label>Refresh Monitoring Documentation List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_of_access_uses_and__c</fullName>
        <description>Indicator if the monitor updated the property interest for changes to public access, current uses and/or permitted activities.This was called Part VI data in Conservation Track.</description>
        <inlineHelpText>If you observed changes to public access, current uses or permitted activities on the property, please update the property interest record in Salesforce.  Select &quot;yes&quot; if you made updates and &quot;no&quot; if you did not.</inlineHelpText>
        <label>Update of access, uses OR activities?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vegetation_Size__c</fullName>
        <inlineHelpText>Consider the percentage of both standing and down vegetation cover.  Does vegetation cover, both standing and down, comprise less than or equal to 50% of the visible area?</inlineHelpText>
        <label>XDeprecate_Vegetation Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verification_Type__c</fullName>
        <inlineHelpText>Please select the type of field verification.</inlineHelpText>
        <label>XDeprecate_Verification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Formal</fullName>
                </value>
                <value>
                    <fullName>Informal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_All_Monitoring_Photos__c</fullName>
        <formula>HYPERLINK(&quot;/_ui/search/ui/UnifiedSearchResults?offset=0&amp;str=&quot;&amp;SUBSTITUTE(Short_Name__c, &quot; &quot;, &quot;%20&quot;)&amp;&quot;&amp;sen=&amp;sen=&amp;fen=a3e&amp;initialViewMode=detail&amp;00Na000000B8sZXEAZPhoto__c=&quot;&amp;SUBSTITUTE(Property_Interest__r.Name, &quot; &quot;, &quot;%20&quot;)&amp;&quot;&amp;sFltrFields=00Na000000B8sZXEAZPhoto__c%2C&quot;, &quot;Click Here (Desktop Only)&quot;, &quot;target=_blank&quot;)</formula>
        <inlineHelpText>View monitoring photos from all monitoring years.</inlineHelpText>
        <label>View All Monitoring Photos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_CY_Monitoring_Photos__c</fullName>
        <formula>HYPERLINK(&quot;/_ui/search/ui/UnifiedSearchResults?offset=0&amp;str=&quot;&amp;SUBSTITUTE(External_Inspection_ID__c, &quot; &quot;, &quot;%20&quot;)&amp;&quot;&amp;sen=&amp;sen=&amp;fen=a3e&amp;initialViewMode=detail&amp;00Na000000B8sZXEAZPhoto__c=&quot;&amp;SUBSTITUTE(Property_Interest__r.Name, &quot; &quot;, &quot;%20&quot;)&amp;&quot;&amp;00Na000000B8sZ1EAJPhoto__c=&quot;&amp;TEXT(YEAR(Created_or_Inspected_Date__c))&amp;&quot;&amp;sFltrFields=00Na000000B8sZXEAZPhoto__c%2C00Na000000B8sZ1EAJPhoto__c%2C&quot;, &quot;Click Here (Desktop Only)&quot;, &quot;target=_blank&quot;)</formula>
        <inlineHelpText>Click this link to view all of the easement/deed restriction monitoring photos associated with this Property Interest this monitoring year.</inlineHelpText>
        <label>View Current Year Monitoring Photos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Monitoring_Documentation__c</fullName>
        <formula>HYPERLINK(&quot;https://tnc.app.box.com/folder/&quot;&amp;Property_Interest__r.MDFolderID__c&amp;&quot;?sortColumn=date&amp;sortDirection=desc&quot;, &quot;Click Here (Desktop Only)&quot;, &quot;_blank&quot;)</formula>
        <inlineHelpText>Click this link to go to the Box folder with the Monitoring Documentation associated with this interest.*NOTE: If you have not opened up the property interest record at least once to be collaborated on this folder, this link will not work.</inlineHelpText>
        <label>View Monitoring Documentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Monitoring_Reports__c</fullName>
        <formula>HYPERLINK(&quot;https://tnc.app.box.com/folder/&quot;&amp;Property_Interest__r.MRFolderID__c&amp;&quot;?sortColumn=name&amp;sortDirection=desc&quot;, &quot;Click Here (Desktop Only)&quot;, &quot;_blank&quot;)</formula>
        <inlineHelpText>Click here to view the box folder that contains previous monitoring reports for this interest. *NOTE: If you have not opened up the property interest record at least once to be collaborated on this folder, this link will not work.</inlineHelpText>
        <label>View Reports Archive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Primary_References__c</fullName>
        <formula>HYPERLINK(&quot;https://tnc.app.box.com/folder/&quot;&amp;Property_Interest__r.PRFolderID__c&amp;&quot;?sortColumn=name&amp;sortDirection=asc&quot;, &quot;Click Here (Desktop Only)&quot;, &quot;_blank&quot;)</formula>
        <inlineHelpText>Click this link to go to the Box folder that has the primary references for this interest. *NOTE: If you have not opened up the property interest record at least once to be collaborated on this folder, this link will not work.</inlineHelpText>
        <label>View Primary References</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_Baseline_reviewed__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>Was the easement or deed restriction text read and baseline documentation reviewed immediately before the inspection?</inlineHelpText>
        <label>Was legal text and baseline reviewed ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Water_Depth__c</fullName>
        <inlineHelpText>Consider the average water depth from both the 50 meter and the 200 meter stakes.  Is the average water depth between two to four inches?</inlineHelpText>
        <label>XDeprecate_Water Depth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weather_Notes__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>Enter any notes about weather in the area during this monitoring year.</inlineHelpText>
        <label>Weather Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_accompanied__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>Please list everyone who was present in addition to the monitor for this inspection and their role in the interest starting with the owner or owner&apos;s representative (if present).</inlineHelpText>
        <label>List everyone present for the visit:</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_was_contacted__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>Please indicate name of the person (and their role e.g. Owner, Manager...) contacted before inspection.</inlineHelpText>
        <label>Who was contacted?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Annual Inspection/Monitoring</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Property_Management__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Inspection_Date__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Created_or_Inspected_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>